Fix spacing between busy message and spinner

--- a/client/my-sites/domains/domain-management/list/style.scss
+++ b/client/my-sites/domains/domain-management/list/style.scss
@@ -358,6 +358,7 @@ input[type='radio'].domain-management-list-item__radio {
 	.domain-item__busy-message {
 		font-size: $font-body-small;
 		margin-left: auto;
+		margin-right: 8px;
 	}
 
 	.domain-item__upsell {
